# daringsby

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  deno.json  docker-compose.yml  env.example  fresh.gen.ts  gendocs.sh  generate-certs.sh  heartbeat_sensor.ts  index.html  justfile  lib.ts  logger.ts  main.ts  nginx.conf  outline.sh  package.json  scratch.js  scratch.rs  server.ts  test_thought.rs  test_will_context.rs
.cargo/: config.toml
core/: Cargo.toml
core/src/: ethics.rs  genie.rs  lib.rs  memory.rs  mood.rs  prompt_builder.rs  psyche.rs  types.rs  wit.rs  witness.rs
core/src/fond/: mod.rs
core/tests/: psyche.rs
frontend/: Cargo.toml  index.html  package.json  tsconfig.json
frontend/__tests__/: audio.test.js  debug.test.js
frontend/psychic/: index.html  psychic.js  styles.css  timeline.html
frontend/src/: app.ts  lib.rs
frontend/test/: audio-after-open.test.js  browser-motion.test.js  camera-swap.test.js  conversation-history-sync.test.js  conversation-scroll.test.js  details-data-attr.test.js  mobile-layout.test.js  psychic-browser-cache.test.js  psychic-cluster-node-size.test.js  psychic-embedding-links.test.js  psychic-face-images.test.js  psychic-filters.test.js  psychic-relationship-links.test.js  psychic-speech-segment-playback.test.js  psychic-temporal-layout.test.js  psychic-timeline-mode.test.js  speech-recognition-after-open.test.js  speech-recognition-text.test.js  thought-tabs.test.js  typescript-report.test.js  webcam-after-open.test.js  webcam-error.test.js  webcam-guard.test.js  webcam-restart.test.js  wit-detail-id.test.js  ws-ready-guard.test.js
lingproc/: AGENTS.md  Cargo.toml
lingproc/src/: lib.rs  math.rs  ollama_server.rs  profiling.rs  provider.rs  scheduler.rs  segment.rs  segmenter.rs  types.rs
lingproc/tests/: prompt_context.rs  provider.rs  segment.rs  segmentation_equivalence.rs  segmenter.rs  sentence.rs  word.rs
llm/: Cargo.toml
llm/src/: client.rs  lib.rs  model.rs  pool.rs  runner.rs  task.rs  traits.rs
llm/tests/: mock_server.rs  test_pool.rs  test_runner.rs
memory/: AGENTS.md  Cargo.toml
memory/src/: experience.rs  graphrag.rs  lib.rs
pete/: AGENTS.md  Cargo.toml  README.md  build.rs  heartbeat_sensor.ts  mod.ts  pete.ts
pete/src/: asr.rs  ear.rs  event_bus.rs  face.rs  face_ipc.rs  lib.rs  logging.rs  main.rs  motor.rs  mouth.rs  movie.rs  ollama.rs  psyche_factory.rs  sensors.rs  simulator.rs  source.rs  tts.rs  tts_mouth.rs  web.rs
pete/src/sensor/: eye.rs  geo.rs  heartbeat.rs  mod.rs  motion.rs  self_discovery.rs
pete/tests/: autologos_sensor_test.ts  beat_sensory_test.ts  build.rs  combobulator_test.ts  confirm_echo_trim_test.ts  conversation.rs  coqui.rs  e2e.rs  enable_debug.rs  event_bus_capacity.rs  face.rs  heart.rs  index.rs  input_listener.rs  instruction_follower_test.ts  mod_test.ts  mouth.rs  ollama.rs  ollama_temperature_test.ts  on_feel_test.ts  on_prompt_test.ts  provider_utils.rs  psyche_init.rs  psyche_integration_test.ts  psyche_loop.rs  psyche_test.ts  self_discovery.rs  smoke.rs  source.rs  take_turn_test.ts  tts_mouth.rs  web.rs  websocket_sensor_test.ts  websocket_turn_delay_test.ts  wit_page.rs  wits_loop.rs  ws_audio.rs  ws_geolocate.rs  ws_text.rs
pete/tests/features/: pipeline.feature
psyche/: AGENTS.md  Cargo.toml
psyche/src/: and_mouth.rs  bus.rs  debug.rs  default_prompt.rs  default_prompt.txt  emoji_mouth.rs  experience.rs  heart.rs  impression.rs  instruction.rs  join_scheduler.rs  lib.rs  ling.rs  logging.rs  memory.rs  model.rs  motor.rs  motor_call.rs  motorcall.rs  pending_turn.rs  perception.rs  plain_mouth.rs  prehension.rs  processor_scheduler.rs  prompt.rs  psyche.rs  runtime.rs  scheduler.rs  sensation.rs  sensor.rs  sensors.rs  server.rs  task_group.rs  topics.rs  trim_mouth.rs  types.rs  vision_wit.rs  voice.rs  will.rs  wit.rs
psyche/src/sensors/: face.rs  image_vector.rs  mod.rs
psyche/src/traits/: buffered_wit.rs  countenance.rs  doer.rs  ear.rs  motor.rs  mouth.rs  observer.rs  sensor.rs  tts.rs  wit.rs
psyche/src/util/: math.rs  mod.rs
psyche/src/wits/: combobulator.rs  combobulator_summarizer.rs  combobulator_wit.rs  entity_wit.rs  episode_wit.rs  face_memory_wit.rs  face_sensor.rs  face_wit.rs  fond_du_coeur.rs  fond_du_coeur_wit.rs  heart_wit.rs  identity_wit.rs  instant_wit.rs  memory.rs  memory_wit.rs  moment_wit.rs  quick.rs  sensation_graph_observer.rs  situation_wit.rs  vision_wit.rs  voice_memory_wit.rs  will.rs  will_summarizer.rs  will_wit.rs
psyche/static/: index.html
psyche/tests/: and_mouth.rs  channel_capacity.rs  combobulator.rs  contextual_prompt.rs  conversation_merge.rs  conversation_tail.rs  converse.rs  countenance.rs  emoji_mouth.rs  entity_wit.rs  episode_wit.rs  experience.rs  experience_tick.rs  extract_tag.rs  face_memory_wit.rs  face_sensor.rs  face_wit.rs  fond_du_coeur.rs  heart.rs  heart_wit.rs  identity_wit.rs  ling.rs  liveness.rs  memory.rs  memory_integration.rs  memory_timeout.rs  memory_wit.rs  model.rs  moment_wit.rs  motor.rs  motor_registry.rs  neo4j_client.rs  plain_mouth.rs  prehension.rs  prompt.rs  qdrant_client.rs  quick.rs  sensation_graph_observer.rs  situation_wit.rs  topic_bus.rs  (+14 more)
runtime/: Cargo.toml
runtime/src/: face.html  index.html  lib.rs  logger.rs  main.rs  see.html  server.rs
runtime/tests/: server.rs
sensation-server/: Cargo.toml
sensation-server/src/: devpanel.html  lib.rs  main.rs
sensation-server/tests/: ws_test.rs
sensor/: Cargo.toml
sensor/src/: eye.rs  heartbeat.rs  lib.rs  sensation.rs  sensor.rs  whisper_streamer.rs  ws.rs
sensor/tests/: eye.rs  face.rs  heartbeat.rs  whisper_streamer.rs  ws.rs
shared/: Cargo.toml
shared/src/: lib.rs
tts/: Cargo.toml
tts/src/: lib.rs  sentence_streamer.rs
tts/tests/: mock_llm_server.rs  mock_tts_server.rs  sentence_streamer.rs  test_speak.rs
voice/: Cargo.toml
voice/src/: context.rs  conversation.rs  lib.rs  stream.rs
voice/src/model/: mod.rs  registry.rs  scheduler.rs
voice/tests/: chat_voice.rs  conversation.rs  model_routing.rs  stream.rs
(+164 files in other folders)
