[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
sensor = { path = "../sensor" }
voice = { path = "../voice" }
memory = { path = "../memory" }
llm = { path = "../llm" }
futures-util = "0.3"
