[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sycamore = { version = "0.8", features = ["suspense"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["HtmlElement"] }
gloo-net = { version = "0.5", features = ["websocket"] }
shared = { path = "../shared" }
futures-util = "0.3"
