[package]
name = "lingproc"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
ollama-rs = { version = "0.3", features = ["stream"] }
async-openai = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
modeldb = { path = "../modeldb" }
anyhow = "1"
futures = "0.3"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
warp = "0.3"
serde_json = "1"
