[package]
name = "lingproc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
ollama-rs = { version = "0.3", features = ["stream"] }
tokio-stream = { version = "0.1", features = ["sync"] }
pragmatic-segmenter = "0.1"
unicode-segmentation = "1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
