[package]
name = "lingproc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
ollama-rs = { version = "0.3", features = ["stream"] }
tokio = { version = "1", features = ["time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
pragmatic-segmenter = "0.1"
unicode-segmentation = "1"
futures = "0.3"
tracing = "0.1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
ts-rs = { version = "7", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
httpmock = "0.6"
serde_json = "1"

[features]
ts = ["ts-rs"]
