[package]
name = "llm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = "0.1"
futures-core = "0.3"
futures-util = "0.3"
ollama-rs = { version = "0.3", features = ["stream"] }
regex = "1"


[dev-dependencies]
warp = "0.3"

