[package]
name = "memory"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
sensor = { path = "../sensor" }
llm = { path = "../llm" }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
qdrant-client = "1.14"
neo4rs = "0.9.0-rc.6"
futures-util = "0.3"
base64 = "0.21"
futures-core = "0.3"
