[package]
name = "pete"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
psyche = { path = "../psyche" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "json", "tokio", "ws"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
pragmatic-segmenter = "0.1"
dioxus = { version = "0.4.3", default-features = false, features = ["html", "macro"] }
dioxus-ssr = "0.4.3"
reqwest = { version = "0.11", features = ["stream"] }
base64 = { version = "0.21" }
futures = "0.3"

[features]
default = []
tts = []

[build-dependencies]
dioxus = { version = "0.4.3", default-features = false, features = ["html", "macro"] }
dioxus-ssr = "0.4.3"

[dev-dependencies]
assert_cmd = "2"
futures = "0.3"
tokio-tungstenite = "0.27"
