[package]
name = "pete"
version = "0.1.0"
edition = "2024"

[dependencies]
psyche = { path = "../psyche" }
lingproc = { path = "../lingproc" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time"] }
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "json", "tokio", "ws"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../shared" }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
pragmatic-segmenter = "0.1"
dioxus = { version = "0.4.3", default-features = false, features = ["html", "macro"] }
dioxus-ssr = "0.4.3"
reqwest = { version = "0.11", features = ["stream"] }
base64 = { version = "0.21" }
futures = "0.3"
urlencoding = "2"
tower-http = { version = "0.6", features = ["fs"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio-tungstenite = "0.27"
mime_guess = "2"
dotenvy = "0.15"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
hound = { version = "3", optional = true }
num_cpus = { version = "1", optional = true }
whisper-rs = { version = "0.16", optional = true }
voxudio = { version = "0.6.2", default-features = false, features = ["model"], optional = true }
open_clip_inference = { version = "0.4.0", optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"], optional = true }

[features]
default = ["tts", "asr-cuda", "voice", "all-sensors"]
tts = []
asr = ["dep:hound", "dep:num_cpus", "dep:whisper-rs"]
asr-cuda = ["asr", "whisper-rs/cuda"]
voice = ["asr", "dep:voxudio"]
scene-vec = ["dep:open_clip_inference", "dep:image"]
e2e = []
eye = []
face = []
image-vector = []
geo = []
motion = []
ear = []
all-sensors = ["eye", "image-vector", "face", "geo", "motion", "ear"]

[build-dependencies]
dioxus = { version = "0.4.3", default-features = false, features = ["html", "macro"] }
dioxus-ssr = "0.4.3"

[dev-dependencies]
assert_cmd = "2"
futures = "0.3"
httpmock = "0.6"
cucumber = "0.21"

[[test]]
name = "e2e"
harness = false
required-features = ["e2e"]

[[bin]]
name = "pete"
path = "src/main.rs"

[[bin]]
name = "face"
path = "src/bin/face.rs"

[[bin]]
name = "psychic"
path = "src/bin/psychic.rs"

[[bin]]
name = "transcription"
path = "src/bin/transcription.rs"
required-features = ["asr"]

[[bin]]
name = "big_transcribe"
path = "src/bin/big_transcribe.rs"
required-features = ["asr"]

[[bin]]
name = "frecog"
path = "src/bin/frecog.rs"
required-features = ["face"]

[[bin]]
name = "vrecog"
path = "src/bin/vrecog.rs"
required-features = ["voice"]

[[bin]]
name = "locate"
path = "src/bin/locate.rs"

[[bin]]
name = "scene_vec"
path = "src/bin/scene_vec.rs"
required-features = ["scene-vec"]

[[bin]]
name = "image_desc"
path = "src/bin/image_desc.rs"

[[bin]]
name = "combobulate"
path = "src/bin/combobulate.rs"

[[bin]]
name = "timeline"
path = "src/bin/timeline.rs"

[[bin]]
name = "movie"
path = "src/bin/movie.rs"

[[bin]]
name = "cluster"
path = "src/bin/cluster.rs"

[[bin]]
name = "raw_retention"
path = "src/bin/raw_retention.rs"

[[bin]]
name = "forget-silence"
path = "src/bin/forget_silence.rs"
required-features = ["asr"]
