[package]
name = "psyche"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
anyhow = "1"
ollama-rs = { version = "0.3", features = ["stream"] }
tokio = { version = "1", features = ["sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
pragmatic-segmenter = "0.1"
lingproc = { path = "../lingproc" }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
serde_json = "1"
unicode-segmentation = "1"
ts-rs = { version = "7", optional = true }
emojis = "0.6"
pulldown-cmark = "0.9"
quick-xml = "0.31"
crossbeam-utils = "0.8"
once_cell = "1"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
base64 = "0.21"
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"

[features]
default = ["all-sensors"]
eye = []
face = []
geo = []
ear = []
all-sensors = ["eye", "face", "geo", "ear"]
ts = ["ts-rs", "lingproc/ts"]
