[package]
name = "sensation-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

# for tests
tokio-tungstenite = { version = "0.20", optional = true }

[lib]
name = "sensation_server"
path = "src/lib.rs"

[[bin]]
name = "sensation-server"
path = "src/main.rs"

[dev-dependencies]
futures-util = "0.3"
tokio-tungstenite = "0.20"
