[package]
name = "sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde", "clock"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.20"
futures-util = "0.3"
url = "2"
whisper-rs = "0.14"
async-stream = "0.3"
glob = "0.3"
