[package]
name = "tts"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
tokio-stream = "0.1"
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
emojito = "0.3"
llm = { path = "../llm" }

[dev-dependencies]
warp = "0.3"
